--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,8 @@
          <activity 
             android:name =".LoginActivity"
             android:label = "@string/app_name"
-            android:configChanges="orientation">
+            android:theme = "@style/AppTheme.Login"
+            android:screenOrientation= "portrait" >
         </activity>
         
     </application>
