--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,13 +3,13 @@
     package="ro.rcsrds.recordbox"
     android:versionCode="1"
     android:versionName="1.0" >
-    
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="10"
         android:targetSdkVersion="19" />
 
     <application
@@ -26,23 +26,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity 
-            android:name =".MediaPlayerActivity"
-            android:label = "@string/app_name">
+        <activity
+            android:name=".MediaPlayerActivity"
+            android:label="@string/app_name" >
         </activity>
-        
-        <activity 
-            android:name =".RecordingListActivity"
-            android:label = "@string/app_name">
+        <activity
+            android:name=".RecordingListActivity"
+            android:label="@string/app_name" >
         </activity>
-        
-         <activity 
-            android:name =".LoginActivity"
-            android:label = "@string/app_name"
-            android:configChanges="orientation">
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Login" >
         </activity>
-        
+        <activity
+            android:name=".EditRecordingActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
