--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_mainactivity"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,11 +30,11 @@
         <activity
             android:name=".MediaPlayerActivity"
             android:screenOrientation="portrait"
-            android:label="@string/app_name" >
+            android:label="@string/title_mediaplayer" >
         </activity>
         <activity
             android:name=".RecordingListActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_recordinglist"
             android:screenOrientation="portrait" >
         </activity>
         <activity
@@ -45,7 +45,7 @@
         </activity>
         <activity
             android:name=".EditRecordingActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_editrecording"
             android:screenOrientation="portrait" >
         </activity>
     </application>
