--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,8 +31,8 @@
         </activity>
         <activity
             android:name=".MediaPlayerActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_mediaplayer" >
+            android:label="@string/title_mediaplayer"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".RecordingListActivity"
@@ -48,6 +48,11 @@
         <activity
             android:name=".EditRecordingActivity"
             android:label="@string/title_editrecording"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/title_about"
             android:screenOrientation="portrait" >
         </activity>
     </application>
