--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,11 @@
             android:label="@string/title_about"
             android:screenOrientation="portrait" >
         </activity>
+        <activity 
+         	android:name=".SettingsActivity"
+            android:label="@string/title_settings"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
