--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme ="@style/AppTheme.LoginActivity" >
         </activity>
         <activity
             android:name=".EditRecordingActivity"
