--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity
             android:name=".EditRecordingActivity"
             android:label="@string/title_editrecording"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible" >
         </activity>
         <activity
             android:name=".HelpActivity"
