--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_mainactivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:icon="@drawable/ic_launcher" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
